finished the third theme

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>Frontend Mentor | Calculator app</title>
   </head>
-  <body class="second-">
+  <body class="third-theme">
     <main class="container">
       <section class="top-section">
         <h1 class="top-title">calc</h1>
