--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
     <title>Frontend Mentor | Calculator app</title>
   </head>
-  <body class="third-theme">
+  <body class="">
     <main class="container">
       <section class="top-section">
         <h1 class="top-title">calc</h1>
         <span class="theme-text">THEME</span>
         <div class="theme-section">
           <div class="theme-numbers">
-            <span class="theme-number" data-theme="1">1</span>
-            <span class="theme-number" data-theme="2">2</span>
-            <span class="theme-number" data-theme="3">3</span>
+            <span class="theme-number" data-theme="first">1</span>
+            <span class="theme-number" data-theme="second">2</span>
+            <span class="theme-number" data-theme="third">3</span>
           </div>
           <div class="slider-track">
             <div class="slider-thumb"></div>
@@ -31,7 +31,7 @@
         </div>
       </section>
       <section class="screen-section">
-        <div class="screen-text" aria-live="polite">399,981</div>
+        <div class="screen-text" aria-live="polite">0</div>
       </section>
       <section class="keypad-section">
         <button class="calculator-key">7</button>
@@ -64,5 +64,6 @@
         >. Coded by <a href="#">Osaid500</a>.
       </section>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
