--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Osaid500</a>.
+        >. Coded by
+        <a href="https://www.frontendmentor.io/profile/osaid500">Osaid500</a>.
       </section>
     </main>
     <script src="index.js"></script>
